--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT = 'https://newspoint-server.vercel.app'
 API_KEY = 'ee81ff9f416a4def8e6b956b077bb745'
 DB_ID = 'sages'
 DB_PASS = 'sages'
+JWT_SECRET = 'notemasterjwt'
